fix z-index

--- a/app/assets/stylesheets/mixin/mixins.scss
+++ b/app/assets/stylesheets/mixin/mixins.scss
@@ -51,7 +51,7 @@
     border-right: 60px solid transparent;
     border-bottom: 60px solid transparent;
     border-left: 60px solid #ea352d ;
-    z-index:100;
+    z-index: 2;
     &__text {
       transform: rotate(-45deg);
       font-size: 25px;
