--- a/app/assets/stylesheets/product/exhibit-btn.scss
+++ b/app/assets/stylesheets/product/exhibit-btn.scss
@@ -1,5 +1,6 @@
 .toppage-exhibit-btn {
   &__box {
+    z-index: 2;
     background-color: #ea352d;;
     border-radius: 50%;
     position: fixed;
